--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,11 @@
         </select>
         <input type="submit" class="btn btn-primary" value="Filter">
     </form>
+    <%if(validationError != undefined){%>
+        <p class="alert alert-danger">
+        <%= validationError.msg%>
+        </p>
+    <%}%>
     <% if(products.length === 0 ) { %>
         <div class="alert alert-danger">
             there is no products
