--- a/views/product.ejs
+++ b/views/product.ejs
@@ -8,7 +8,12 @@
     <% } else { %>
         <div class="row">
         <div class="col col-12 col-md-6">
-            <img src="<%= product.image %>">
+            <% if(product.image.includes('https')){ %>
+                <img src="<%= product.image%>" class="card-img-top" alt="...">
+            <%} else {%>
+                <img src="/<%= product.image%>" class="card-img-top" alt="...">
+            <%}%>
+            
             <form action="/cart" method="post">
                 <input type="number" name="amount" class="from-control">
                 <input type="submit" name="add to cart" class="btn btn-primary">
